Add code for getting spark df to parquet and loaded to bigquery

--- a/dsa-airflow/dags/rg_work_test.ipynb
+++ b/dsa-airflow/dags/rg_work_test.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pyspark\n",
     "import pandas as pd\n",
@@ -44,14 +36,12 @@
     "    \n",
     "    df = df.union(idf)\n",
     "\n",
-    "\n",
-    "df.write.csv(os.path.join(data_dir,'all_tech_stocks'), header=True)\n",
-    "#df = sparkql.read.csv(os.path.join(data_dir,'all_tech_stocks.csv'), header=True)"
+    "df.coalesce(1).write.format(\"parquet\").save(os.path.join(data_dir,'all_tech_stocks.parquet'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -69,18 +59,20 @@
        " Row(stock_name='TSLA', date='2022-12-29', open='120.389999', high='123.570000', low='117.500000', close='121.820000', adj_close='121.820000', volume='221923300')]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.tail(10)"
+    "gcs_filepath = \n",
+    "\n",
+    "df.coalesce(1).write.mode('overwrite').csv(gcs_filepath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +95,7 @@
     "table_id = f\"{PROJECT_NAME}.{DATASET_NAME}.stocks\"\n",
     "\n",
     "data_dir = '../data'\n",
-    "DATA_FILE = os.path.join(data_dir,'all_tech_stocks.csv')\n",
+    "DATA_FILE = os.path.join(data_dir,'all_tech_stocks.parquet/part-00000-59898083-310c-4f1e-a416-5593ab0d19c9-c000.snappy.parquet')\n",
     "\n",
     "TABLE_SCHEMA = [\n",
     "    bigquery.SchemaField('stock_name', 'STRING', mode='REQUIRED'),\n",
@@ -127,7 +119,7 @@
     "\n",
     "def create_stocks_table():\n",
     "    job_config = bigquery.LoadJobConfig(\n",
-    "            source_format=bigquery.SourceFormat.CSV,\n",
+    "            source_format=bigquery.SourceFormat.PARQUET,\n",
     "            autodetect=True,\n",
     "            create_disposition='CREATE_NEVER',\n",
     "            write_disposition='WRITE_TRUNCATE',\n",
