Add code to resolve issues with parquet getting uploaded to bigquery

--- a/dsa-airflow/dags/rg_work_test.ipynb
+++ b/dsa-airflow/dags/rg_work_test.ipynb
@@ -2,24 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 179,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AnalysisException",
-     "evalue": "Table or view not found: comp_key; line 1 pos 107;\n'Project ['CONCAT('stock_name, 'date) AS sd_id#57042, 'stock_name, 'date, 'open, 'high, 'low, 'close, 'adj_close, 'volume]\n+- 'UnresolvedRelation [comp_key], [], false\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAnalysisException\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/74/s3dyx3n926z8q5dgtnrj1yp00000gp/T/ipykernel_8773/3142796235.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0midf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0midf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'stock_name'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'date'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'open'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'high'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'low'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'close'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'adj_close'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'volume'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0midf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreateOrReplaceGlobalTempView\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"comp_key\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m     \u001b[0midf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msparkql\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SELECT CONCAT(stock_name, date) AS sd_id, stock_name, date, open, high, low, close, adj_close, volume FROM comp_key\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0;31m#idf = idf.toPandas()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/team-week3/venv/lib/python3.7/site-packages/pyspark/sql/session.py\u001b[0m in \u001b[0;36msql\u001b[0;34m(self, sqlQuery, **kwargs)\u001b[0m\n\u001b[1;32m   1032\u001b[0m             \u001b[0msqlQuery\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mformatter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msqlQuery\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1033\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1034\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jsparkSession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msqlQuery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1035\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1036\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/team-week3/venv/lib/python3.7/site-packages/py4j/java_gateway.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1320\u001b[0m         \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgateway_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_command\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1321\u001b[0m         return_value = get_return_value(\n\u001b[0;32m-> 1322\u001b[0;31m             answer, self.gateway_client, self.target_id, self.name)\n\u001b[0m\u001b[1;32m   1323\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1324\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mtemp_arg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtemp_args\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/team-week3/venv/lib/python3.7/site-packages/pyspark/sql/utils.py\u001b[0m in \u001b[0;36mdeco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    194\u001b[0m                 \u001b[0;31m# Hide where the exception came from that shows a non-Pythonic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    195\u001b[0m                 \u001b[0;31m# JVM exception message.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 196\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mconverted\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    197\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    198\u001b[0m                 \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAnalysisException\u001b[0m: Table or view not found: comp_key; line 1 pos 107;\n'Project ['CONCAT('stock_name, 'date) AS sd_id#57042, 'stock_name, 'date, 'open, 'high, 'low, 'close, 'adj_close, 'volume]\n+- 'UnresolvedRelation [comp_key], [], false\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pyspark\n",
     "import pandas as pd\n",
@@ -35,28 +20,28 @@
     "\n",
     "file_names = ['ADBE','AMZN', 'CRM', 'CSCO', 'GOOGL', 'IBM','INTC','META','MSFT','NFLX','NVDA','ORCL','TSLA']\n",
     "\n",
-    "columns = 'stock_name string, date date, open float, high float, low float, close float, adj_close float, volume int'\n",
+    "columns = 'stock_name string, date string, open float, high float, low float, close float, adj_close float, volume int'\n",
     "\n",
     "df = sparkql.read.csv(os.path.join(data_dir,'AAPL.csv'), header=True)\n",
     "df = df.toDF('date', 'open', 'high', 'low', 'close', 'adj_close', 'volume')\n",
     "df = df.withColumn('stock_name', sf.lit('AAPL'))\n",
-    "df = df.select('stock_name', 'date', 'open', 'high', 'low', 'close', 'adj_close', 'volume')\n",
+    "#df = df.select('stock_name', 'date', 'open', 'high', 'low', 'close', 'adj_close', 'volume')\n",
+    "df = sparkql.sql(\"SELECT CONCAT(stock_name, date) AS sd_id, stock_name, date, open, high, low, close, adj_close, volume FROM key\")\n",
+    "df = df.select('sd_id','stock_name', 'date', 'open', 'high', 'low', 'close', 'adj_close', 'volume')\n",
     "\n",
     "for csv in file_names:\n",
     "    idf = sparkql.read.csv(os.path.join(data_dir,csv+'.csv'), header=True)\n",
     "    idf = idf.toDF('date', 'open', 'high', 'low', 'close', 'adj_close', 'volume')\n",
     "    idf = idf.withColumn('stock_name', sf.lit(csv))\n",
-    "    idf = idf.select('stock_name', 'date', 'open', 'high', 'low', 'close', 'adj_close', 'volume')\n",
-    "    idf.createOrReplaceGlobalTempView(\"key\")\n",
+    "    #idf = idf.select('stock_name', 'date', 'open', 'high', 'low', 'close', 'adj_close', 'volume')\n",
+    "    idf.createOrReplaceTempView(\"key\")\n",
     "    idf = sparkql.sql(\"SELECT CONCAT(stock_name, date) AS sd_id, stock_name, date, open, high, low, close, adj_close, volume FROM key\")\n",
-    "    \n",
-    "    #idf = idf.toPandas()\n",
+    "    idf = idf.select('sd_id','stock_name', 'date', 'open', 'high', 'low', 'close', 'adj_close', 'volume')\n",
     "    \n",
     "    df = df.union(idf)\n",
+    "#df.orderBy(sf.col('sd_id').asc())\n",
     "\n",
-    "df.show(5)\n",
-    "\n",
-    "#df.coalesce(1).write.format(\"parquet\").save(os.path.join(data_dir,'all_tech_stocks.parquet'))\n"
+    "df.coalesce(1).write.format(\"parquet\").save(os.path.join(data_dir,'all_tech_stocks.parquet'))\n"
    ]
   },
   {
@@ -84,7 +69,7 @@
     "table_id = f\"{PROJECT_NAME}.{DATASET_NAME}.stocks\"\n",
     "\n",
     "data_dir = '../data'\n",
-    "DATA_FILE = os.path.join(data_dir,'all_tech_stocks.parquet/part-00000-59898083-310c-4f1e-a416-5593ab0d19c9-c000.snappy.parquet')\n",
+    "DATA_FILE = os.path.join(data_dir,'all_tech_stocks.parquet/part-00000-aa854ce3-ba60-4fb4-abe7-f7df420718dc-c000.snappy.parquet')\n",
     "\n",
     "TABLE_SCHEMA = [\n",
     "    bigquery.SchemaField('stock_name', 'STRING', mode='REQUIRED'),\n",
